data/derived/comb/progs/unify/prog1094.ml.out
Characters 237-265:
  else expr ^ "Cosine(" ^ buildhelper 0 (depth-1) expr ^ ")"
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         string
